Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28321

[Reg 9.0.2 -> 10.0.0rc1] Problems with "Rename Symbol" tool

XMLWordPrintable

    • 4d688c932 (10.0)

      Steps to reproduce

      1. Create a new Qt project
      2. In main.cpp, hover your mouse cursor over "main()" and press Ctrl+Shift+R to activate "Rename Symbol Under Cursor"
      3. Type "myFunc" as the new function name

       

      Outcomes
      After Step #2,

      • Qt Creator 8 shows "C++ Usages: main" (correct)
      • Qt Creator 9 shows "Find References with clangd for <PROJECT> for: main_new" (wrong – we searched for "main", not "main_new")

       

      After Step #3,

      • Qt Creator 8 allows us to click "Replace" immediately (correct)
      • Qt Creator 9 prevents us from clicking "Replace" immediately, saying "Search Again to update results and re-enable Replace" (wrong – we shouldn't need to click "Search Again" here)

        1. qtc8-rename-init.png
          33 kB
          Sze Howe Koh
        2. qtc8-rename-newname.png
          33 kB
          Sze Howe Koh
        3. qtc9-rename-init.png
          32 kB
          Sze Howe Koh
        4. qtc9-rename-newname.png
          33 kB
          Sze Howe Koh
        For Gerrit Dashboard: QTCREATORBUG-28321
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes